# diplomacy_cicero

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  pyproject.toml  pyrightconfig.CI.json  pyrightconfig.noexcludes.json  requirements.txt  run.py  setup.py
.circleci/: Dockerfile  config.yml  node_setup_prereq.sh
conf/: agents.proto  common.proto  conf.proto  misc.proto
conf/ag_pop_cmp/: cmp.prototxt  template.prototxt
conf/c01_ag_cmp/: cmp.prototxt
conf/c02_sup_train/: sl_20200901.prototxt  sl_20211119_base.prototxt
conf/c04_exploit/: research_20221001_paper_cicero.prototxt  research_20221001_paper_diplodocus_high.prototxt
conf/c07_play_webdip/: play.prototxt
conf/exps/: h2h_example.py
data/: 311223_s1911m.json  example_fullpress_game.json  order_vocab.txt
data/cicero_redacted_games/: README.md  game_433761_ENGLAND_AG.json  game_433762_ITALY_AEFT.json  game_433920_RUSSIA_EI.json  game_433967_ENGLAND_IT.json  game_434015_GERMANY_AF.json  game_434119_AUSTRIA_FRT.json  game_434170_TURKEY_FIR.json  game_435086_FRANCE_RT.json  game_435211_ITALY_EGT.json  game_435440_ENGLAND_AR.json  game_435500_FRANCE_AI.json  game_435605_RUSSIA_EFGT.json  game_436345_RUSSIA_AEFGIT.json  game_436958_RUSSIA_AEGIT.json  game_437495_RUSSIA_IT.json  game_437697_ENGLAND_GR.json  game_437765_ITALY_EFR.json  game_438141_FRANCE_EGR.json  game_439643_ENGLAND_T.json  game_439679_ITALY_R.json  (+20 more)
dipcc/: .gitignore  CMakeLists.txt  README.md  compile.sh  distclean.sh  setup.py
dipcc/dipcc/cc/: .template.h  adjacencies.h  adjudicator.cc  cfrstats.cc  cfrstats.h  checks.cc  checks.h  civil_disorder_distances.h  data_fields.cc  data_fields.h  encoding.h  encoding_impl.cc  encoding_v1.cc  encoding_v2.cc  enums.cc  enums.h  exceptions.h  game.cc  game.h  game_id.h  game_state.cc  game_state.h  hash.h  json.cc  json.h  loc.cc  loc.h  message.h  order.cc  order.h  orders_encoder.cc  orders_encoder.h  owned_unit.cc  owned_unit.h  phase.cc  phase.h  power.cc  power.h  scoring.cc  scoring.h  (+6 more)
dipcc/dipcc/profiling/: profile.cc  profile_late.cc
dipcc/dipcc/pybind/: encoding.h  get_orderable_locations.cc  get_phase_data.cc  get_phase_history.cc  logs.cc  messaging.cc  messaging.h  phase_data.h  py_cfrstats.cc  py_dict.cc  py_dict.h  py_game_get_units.h  pybind.cc  thread_pool.h  valid_orders_encoder.h
dipcc/dipcc/python/: README
dipcc/python/: profile_game.py  repro_crash.py  test_thread_pool.py
dipcc/python/datc/: README  datc.html  names.py  parse_datc.py  parse_datc_cache.pkl  render_tests.py
docs/: game_engine.md  game_json_spec.md
fairdiplomacy/: action_exploration.py  action_generation.py  action_generation_test.py  benchmark_agent.py  compare_agent_population.py  compare_agent_population_array.py  compare_agents.py  compare_agents_array.py  compare_agents_array_test.py  env.py  game.py  get_xpower_supports.py  pseudo_orders.py  pydipcc.pyi  situation_check.py  situation_check_press.py  timestamp.py  typedefs.py  variance_reduction.py
fairdiplomacy/selfplay/cc/: CMakeLists.txt  prioritized_replay.h  prioritized_replay_test.cc  pybind.cc  serialization.h  tensor_dict.h
fairdiplomacy_external/: LICENSE  README.md  __init__.py  game_to_html.py  requirements.txt  run.py  webdip_api.py
heyhi/: README.md  __init__.py  checkpoint_repo.py  conf.py  run.py  util.py
model_cards/: ABLATIONS_lm_only_dialogue.md  ABLATIONS_no_pseudos_dialogue.md  base_strategy_model_0_5_policy.md  blueprint.md  cicero_imitation_bilateral_orders_prefix.md  cicero_imitation_orders.md  dialogue.md  diplodocus_high_rl_policy.md  diplodocus_high_rl_value_function.md  diplodocus_low_rl_policy.md  diplodocus_low_rl_value_function.md  draw_classifier.md  fastbot_translite_rol0_policy.md  human_imitation_joint_policy.md  human_imitation_joint_policy_for_rl.md  human_sl_value_function.md  imitation_intent.md  no_press_human_imitation_policy.md  nopress_human_imitation_for_rl_1.md  nopress_human_imitation_for_rl_2.md  rl_search_orders.md  rl_value_function.md  sleep_classifier.md
parlai_diplomacy/: README.md
slurm/: checkpoint_repo.sh  compare_agent_population.py  compare_agents.py  tasks.py
unit_tests/: style_unittest_dict.pkl  test_ampersand_uncorruption.py  test_bart_classifier.py  test_bqre1p_lambdas.py  test_carriage_returns.py  test_cfrstats_pickle.py  test_check_permute_powers.py  test_discriminator_teacher_functions.py  test_draw_state_utils.py  test_message_editing.py  test_order_idxs.py  test_parlai_all_holds_filtering.py  test_parlai_flattener_to_unflattener.py  test_parlai_formatting.py  test_parlai_input_validation.py  test_parlai_input_validation_parts.py  test_parlai_message_history_building.py  test_parlai_message_history_truncation.py  test_parlai_order_filtering.py  test_parlai_special_tokens.py  test_pseudo_cache.py  test_pydipcc.py  test_resample_duplicate_disbands.py  test_rollout_spring_ending.py  test_search_helpers.py  test_sleep.py  test_timestamp.py  test_utils_game.py  test_utils_orders.py
(+271 files in other folders)
